# femtoclaw-bench

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: micro.rs
fixtures/: compare.example.json
scripts/: README.md  rss_sample.sh  run_matrix.sh
src/: lib.rs  main.rs  protocol.rs  report.rs  util.rs
src/benchmarks/: compare.rs  mod.rs  portable.rs  startup.rs  tests_smoke.rs
